--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.13.1",
-    "tailwindcss": "^4.2.1"
+    "swiper": "^12.1.2",
+    "tailwindcss": "^4.2.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
